--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "dependencies": {
         "compression": "^1.7.4",
         "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "express-validator": "^6.14.0",
         "helmet": "^5.0.2",
         "mongoose": "^6.2.3",
         "morgan": "^1.10.0"
@@ -22,6 +24,7 @@
     "devDependencies": {
         "@types/compression": "^1.7.2",
         "@types/cors": "^2.8.12",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
         "@types/helmet": "^4.0.0",
         "@types/mongoose": "^5.11.97",
