--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.17.3",
         "express-validator": "^6.14.0",
         "helmet": "^5.0.2",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.3",
         "morgan": "^1.10.0"
     },
@@ -27,6 +28,7 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
         "@types/helmet": "^4.0.0",
+        "@types/jsonwebtoken": "^8.5.8",
         "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.21",
