--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "main": "index.js",
     "scripts": {
+        "start": "tsc && node build/server.js",
         "build": "tsc -w",
-        "dev": "nodemon ./build/server.js",
-        "start": "tsc && -build/server.js"
+        "dev": "nodemon ./build/server.js"
     },
     "keywords": [],
     "author": "",
