--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "helmet": "^5.0.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.3",
-        "morgan": "^1.10.0"
+        "morgan": "^1.10.0",
+        "typescipt": "^1.0.0",
+        "typescript": "^4.5.5"
     },
     "devDependencies": {
         "@types/compression": "^1.7.2",
@@ -30,7 +32,6 @@
         "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.21",
-        "nodemon": "^2.0.15",
-        "typescript": "^4.5.5"
+        "nodemon": "^2.0.15"
     }
 }
