--- a/package.json
+++ b/package.json
@@ -4,13 +4,12 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "tsc && node build/server.js"
+        "start": "node build/server.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@types/typescript": "^2.0.0",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
@@ -20,8 +19,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.2.3",
         "morgan": "^1.10.0",
-        "typescipt": "^1.0.0",
-        "typescript": "^4.5.5"
+        "typescipt": "^1.0.0"
     },
     "devDependencies": {
         "@types/compression": "^1.7.2",
@@ -33,6 +31,8 @@
         "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.21",
-        "nodemon": "^2.0.15"
+        "@types/typescript": "^2.0.0",
+        "nodemon": "^2.0.15",
+        "typescript": "^4.6.2"
     }
 }
