--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node build/server.js"
+        "start": "node build/server.js",
+        "ts": "tsc -w",
+        "dev": "nodemon ./build/server"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "compression": "^1.7.4",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
@@ -22,6 +25,7 @@
         "typescipt": "^1.0.0"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/compression": "^1.7.2",
         "@types/cors": "^2.8.12",
         "@types/dotenv": "^8.2.0",
