--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "start": "node build/index.js",
         "ts": "tsc -w",
-        "dev": "nodemon ./build/index"
+        "dev": "nodemon ./build/index",
+        "test": "jest"
     },
     "keywords": [],
     "author": "",
@@ -33,12 +34,16 @@
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.13",
         "@types/helmet": "^4.0.0",
+        "@types/jest": "^28.1.6",
         "@types/jsonwebtoken": "^8.5.8",
         "@types/mongoose": "^5.11.97",
         "@types/morgan": "^1.9.3",
         "@types/node": "^17.0.21",
         "@types/typescript": "^2.0.0",
+        "jest": "^28.1.3",
         "nodemon": "^2.0.15",
+        "ts-jest": "^28.0.7",
+        "ts-mockito": "^2.6.1",
         "typescript": "^4.6.2"
     }
 }
