--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "node build/index.js",
+        "start": "tsc && node build/index.js",
         "ts": "tsc -w",
         "dev": "nodemon ./build/index",
         "test": "jest"
