Added use of mongo with docker for dev

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "start": "node build/index.js",
         "ts": "tsc -w",
         "build": "tsc",
-        "dev": "nodemon ./build/index",
+        "dev": "nodemon ./build/src/",
         "test": "jest"
     },
     "keywords": [],
